# TTT-tk

./: .gitignore  README.md  config.py  setup.py  test2.py  thunderkittens.cpp
include/common/: base_ops.cuh
include/ops/group/shared/tile/: maps.cuh
include/ops/warp/register/tile/: maps.cuh
include/ops/warp/shared/tile/: maps.cuh
kernels/attn/h100/: attn  attn.d
kernels/based/: based  based.d
kernels/ttt/: .gitignore  Makefile  harness.cuh  harness.impl  matching.py  torch_harness.cuh  ttt.cu
kernels/ttt/triton_comps/: linear_forward.py  mlp_forward_split.py
kernels/ttt_backward/: matching.py  ttt.cu
kernels/ttt_backward/triton_comps/: linear_backward.py  mlp_backward_split.py
kernels/ttt_linear/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ttt_linear_forward  ttt_linear_forward.cu
kernels/ttt_mlp/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  ttt_mlp_forward  ttt_mlp_forward.cu  ttt_mlp_forward.d
kernels/ttt_tp/: .gitignore  Makefile  matching.py  ttt_tp  ttt_tp.cu  ttt_tp.d
